--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <div>
+      <div id="clock">
         <div class="hour" id="hour"></div>
       </div>
     </main>
@@ -30,3 +30,5 @@
 </body>
 
 </html>
+
+<!-- https://tutorialzine.com/2013/06/digital-clock -->
