--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="reveil.css">
+  <link rel="stylesheet" type="text/css" href="assets\css\reveil.css">
   <title>Reveil</title>
 </head>
 
@@ -14,7 +14,8 @@
     <header class="page-header">
       <nav>
         <h2 class="logo">WUp</h2>
-        <button class="cta-option">Options</button>
+        <h2 class="date" id="date"></h2>
+        <button class="option">Options</button>
       </nav>
     </header>
     <main class="page-main">
@@ -26,7 +27,8 @@
       <small>info</small>
     </footer>
   </div>
-  <script src="reveil.js"></script>
+  <script src="assets\js\moment.js"></script>
+  <script src="assets\js\reveil.js"></script>
 </body>
 
 </html>
